--- a/bucket1/bucket.yml
+++ b/bucket1/bucket.yml
@@ -1,4 +1,5 @@
 flows:
   25ca6474-8194-40ad-8ede-01ff724e2dc4: {ver: 1, file: Test_github.snapshot}
+  99d41564-b3fc-418a-8d68-4751263c7bfb: {ver: 1, file: ELK_To_BigQuery.snapshot}
 layoutVer: 1
 bucketId: 103f79b7-8419-4097-8721-f670a228fa01
