--- a/bucket1/bucket.yml
+++ b/bucket1/bucket.yml
@@ -3,6 +3,7 @@ flows:
   8672343e-3290-40cb-803e-74d73040f9d5: {ver: 1, file: File_to_Elasticsearch.snapshot}
   3f4aef21-9507-4727-bf59-9bba9beda806: {ver: 1, file: Get_File_Bigquery.snapshot}
   1c2bf686-7b3a-492e-a076-1285c02bd87d: {ver: 1, file: Avro_to_Bigquery.snapshot}
+  9540abce-e0fa-42cd-b568-2693548a27d6: {ver: 1, file: ELK_GCS.snapshot}
   74354c4d-a915-4a1a-ba32-2eac4fd718df: {ver: 1, file: Test_Flow_Internet.snapshot}
   25ca6474-8194-40ad-8ede-01ff724e2dc4: {ver: 1, file: Test_github.snapshot}
   99d41564-b3fc-418a-8d68-4751263c7bfb: {ver: 1, file: ELK_To_BigQuery.snapshot}
